Fixed overflow problem on landing page. Still need to fix the small overflow to the side when screen is small.

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,9 +1,3 @@
-body {
-  padding-top: 70px;
-  padding-bottom: 0;
-  overflow:hidden;
-}
-
 /*
  Customize the Carousel
 */
