--- a/app/assets/stylesheets/theme-overrides.css.scss
+++ b/app/assets/stylesheets/theme-overrides.css.scss
@@ -1,6 +1,5 @@
-
-html { height: 100% }
-body { height: 100%; overflow-y:auto; overflow-x:auto; background-color: white;}
+html { height:100%;}
+body { overflow:auto; background-color: white; position:absolute; bottom: 0; top: 0; right: 0; left: 0;}
 #result-map { height: 100%;}
 
 .row-fluid {
